<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/windowBackground">

    <ImageView
        android:id="@+id/productImageView"
        android:layout_width="128dp"
        android:layout_height="128dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/productNameView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ellipsize="end"
        android:gravity="start"
        android:singleLine="true"
        android:text="Rainbow"
        android:textAppearance="?attr/textAppearanceHeadline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/productImageView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/brandNameView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:gravity="start"
        android:text="Menthos"
        android:textAppearance="?attr/textAppearanceCaption"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/productImageView"
        app:layout_constraintTop_toBottomOf="@id/productNameView" />

    <TextView
        android:id="@+id/carbohydratesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/scan_carbs"
        android:textAppearance="?attr/textAppearanceBody1"
        android:textColor="?attr/colorError"
        app:layout_constraintStart_toEndOf="@id/productImageView"
        app:layout_constraintTop_toBottomOf="@id/brandNameView" />

    <TextView
        android:id="@+id/carbsValueView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:text="100.0g"
        android:textAppearance="?attr/textAppearanceBody1"
        android:textColor="?attr/colorError"
        app:layout_constraintStart_toEndOf="@id/carbohydratesLabel"
        app:layout_constraintTop_toTopOf="@id/carbohydratesLabel" />

    <TextView
        android:id="@+id/fatLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/scan_fat"
        android:textAppearance="?attr/textAppearanceBody1"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintStart_toEndOf="@id/carbsValueView"
        app:layout_constraintTop_toBottomOf="@id/brandNameView" />

    <TextView
        android:id="@+id/fatValueView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:text="100.0g"
        android:textAppearance="?attr/textAppearanceBody1"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintStart_toEndOf="@id/fatLabel"
        app:layout_constraintTop_toTopOf="@id/carbohydratesLabel" />

    <TextView
        android:id="@+id/proteinLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/scan_protein"
        android:textAppearance="?attr/textAppearanceBody1"
        android:textColor="?attr/colorAccent"
        app:layout_constraintStart_toEndOf="@id/productImageView"
        app:layout_constraintTop_toBottomOf="@id/carbohydratesLabel" />

    <TextView
        android:id="@+id/proteinValueView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="4dp"
        android:text="100.0g"
        android:textAppearance="?attr/textAppearanceBody1"
        android:textColor="?attr/colorAccent"
        app:layout_constraintStart_toEndOf="@id/proteinLabel"
        app:layout_constraintTop_toBottomOf="@id/carbohydratesLabel" />

    <TextView
        android:id="@+id/energyLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/scan_energy"
        android:textAppearance="?attr/textAppearanceBody1"
        android:textColor="?attr/colorSecondary"
        app:layout_constraintStart_toEndOf="@id/productImageView"
        app:layout_constraintTop_toBottomOf="@id/proteinValueView" />

    <TextView
        android:id="@+id/energyValueView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="4dp"
        android:text="100 kcal"
        android:textAppearance="?attr/textAppearanceBody1"
        android:textColor="?attr/colorSecondary"
        app:layout_constraintStart_toEndOf="@id/energyLabel"
        app:layout_constraintTop_toBottomOf="@id/proteinLabel" />

</androidx.constraintlayout.widget.ConstraintLayout>