<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/loadingIndicatorfood"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/contentView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/productImageView"
                android:layout_width="0dp"
                android:layout_height="512dp"
                app:layout_constraintEnd_toEndOf="@id/endGuideline"
                app:layout_constraintStart_toStartOf="@id/startGuideline"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/productNameView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="Taste the rainbow with Skittles"
                android:textAppearance="?attr/textAppearanceHeadline5"
                app:layout_constraintEnd_toStartOf="@id/actionButton"
                app:layout_constraintStart_toStartOf="@id/startGuideline"
                app:layout_constraintTop_toBottomOf="@id/productImageView" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/actionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/food_details_save"
                app:layout_constraintEnd_toEndOf="@id/endGuideline"
                app:layout_constraintStart_toEndOf="@id/productNameView"
                app:layout_constraintTop_toBottomOf="@id/productImageView" />

            <TextView
                android:id="@+id/brandNameView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="start"
                android:text="Menthos"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                app:layout_constraintEnd_toEndOf="@id/endGuideline"
                app:layout_constraintStart_toStartOf="@id/startGuideline"
                app:layout_constraintTop_toBottomOf="@id/productNameView" />

            <TextView
                android:id="@+id/barcodeView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="0123456789"
                android:textAppearance="?attr/textAppearanceCaption"
                app:layout_constraintEnd_toEndOf="@id/endGuideline"
                app:layout_constraintStart_toStartOf="@id/startGuideline"
                app:layout_constraintTop_toBottomOf="@id/brandNameView" />

            <TextView
                android:id="@+id/energyLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/food_details_energy"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="?attr/colorSecondary"
                app:layout_constraintStart_toStartOf="@id/startGuideline"
                app:layout_constraintTop_toBottomOf="@id/barcodeView" />

            <TextView
                android:id="@+id/energyValueView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="4dp"
                android:text="100 kcal"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="?attr/colorSecondary"
                app:layout_constraintStart_toEndOf="@id/energyLabel"
                app:layout_constraintTop_toBottomOf="@id/barcodeView" />

            <TextView
                android:id="@+id/carbsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/food_details_carbs"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="?attr/colorError"
                app:layout_constraintStart_toStartOf="@id/startGuideline"
                app:layout_constraintTop_toBottomOf="@id/energyLabel" />

            <TextView
                android:id="@+id/carbsValueView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="4dp"
                android:text="100.0g"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="?attr/colorError"
                app:layout_constraintStart_toEndOf="@id/carbsLabel"
                app:layout_constraintTop_toBottomOf="@id/energyLabel" />

            <TextView
                android:id="@+id/fatLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/food_details_fat"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="?attr/colorPrimary"
                app:layout_constraintStart_toEndOf="@id/carbsValueView"
                app:layout_constraintTop_toBottomOf="@id/energyLabel" />

            <TextView
                android:id="@+id/fatValueView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="4dp"
                android:text="100.0g"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="?attr/colorPrimary"
                app:layout_constraintStart_toEndOf="@id/fatLabel"
                app:layout_constraintTop_toBottomOf="@id/energyLabel" />

            <TextView
                android:id="@+id/proteinLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/food_details_protein"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="?attr/colorAccent"
                app:layout_constraintStart_toEndOf="@id/fatValueView"
                app:layout_constraintTop_toBottomOf="@id/energyLabel" />

            <TextView
                android:id="@+id/proteinValueView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="4dp"
                android:text="100.0g"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="?attr/colorAccent"
                app:layout_constraintStart_toEndOf="@id/proteinLabel"
                app:layout_constraintTop_toBottomOf="@id/energyLabel" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/nutrimentsBarrierBottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="proteinLabel,proteinValueView,fatLabel,fatValueView,carbsLabel,carbsValueView" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/startGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/endGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="16dp" />

            <TextView
                android:id="@+id/ingridientsText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="askdjnasjkdnnaslkdnasjndjkasndjkalsndjkasndjklnasjdknaslkjdnasjkdnkaskdnjdnsdkjansakldnaksjndjkalsndjkalsnd"
                app:layout_constraintEnd_toEndOf="@id/endGuideline"
                app:layout_constraintStart_toStartOf="@id/startGuideline"
                app:layout_constraintTop_toBottomOf="@id/nutrimentsBarrierBottom" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>